--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,52 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.movieWrapper {
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 4rem 0;
+}
+.movie {
+  width: 250px;
+  margin-bottom: 2rem;
+  background-color: #9ccd62;
+  border-radius: 0.3rem;
+  overflow: hidden;
+  box-shadow: 0 0.2rem 0.8rem 0 rgba(0, 0, 0, 0.2);
+  position: relative;
+  cursor: pointer;
+}
+.movie img {
+  max-width: 100%;
+}
+.movieInfo {
+  min-height: auto;
+  padding: 0.5rem 1rem;
+  display: flex;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.movieInfo h3 {
+  font-size: 1.1rem;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.movieInfo span {
+  background-color: #dfdeca;
+  border-radius: 0.3rem;
+  padding: 0.5rem;
+  font-weight: bold;
+}
+.movie-overview {
+  bottom: 0;
+  left: 0;
+  right: 0;
+  overflow: auto;
+  max-height: 100%;
+  padding: 0.5rem 1rem;
+  position: absolute;
+  background-color: #9ccd62;
+  border-top-right-radius: 0.3rem;
+  border-top-left-radius: 0.3rem;
+  transition: 0.3s ease-in;
+  transform: translateY(103%);
+}
+.movie:hover .movie-overview {
+  transform: translateY(0%);
 }
