--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,20 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap');
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
+}
+body {
+  font-family: 'Poppins', sans-serif;
+  font-size: 1rem;
+  background-color: #dfdeca;
+  color: #3a3c42;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.continer {
+  margin: 0 auto;
+  width: 1140px;
 }
+
+/* Colors ⁣⁣⁣⁣⁣⁣⁣⁣⁣⁣⁣👉 3A3C42 • 9CCD62 • F7F8E2 • DFDECA
+⁣⁣⁣⁣⁣⁣Text Colors ⁣⁣⁣⁣⁣⁣⁣⁣⁣⁣⁣👉 F7F8E2 • 3A3C42 • 858021 • 3A3C42 */
